--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                     <p class="text-danger ">Front-end/HTML/CSS/BOOTSTRAP-5</p>
                     <h2>Construction Website Template.</h2>
                     <p class="lead">This is a dummy Construction website template created using HTML, CSS, and Bootstrap.</p>
+                    <a href="https://creator-shailesh.github.io/srconstruction/"class="btn btn-primary">Visit Now</a>
                 </div>      
                 <div class="col-md-5 ">
                     <img src="images/SR CONSTRUCTION.png"class="img-fluid">
@@ -178,6 +179,8 @@
                     <h2>IT Company Website Template.</h2>
                     <p class="lead">This is a dummy IT Company website template created using HTML, CSS, and Bootstrap.
                         </p>
+                        <a href="https://creator-shailesh.github.io/ITCompany/"class="btn btn-primary">Visit Now</a>
+          
                 </div>      
             </div>
             
